[#139505805][#139506201] Updated search to use a left handed navigation menu to help users find products

--- a/CalOrdersJET/src/css/calorders.css
+++ b/CalOrdersJET/src/css/calorders.css
@@ -77,4 +77,16 @@
     
 }
 
+.dialogButtonLeft {
+    float: left;
+    padding-left: 15px;
+    padding-bottom: 10px;
+}
+
+.dialogButtonRight {
+    float: right;
+    padding-right: 15px;
+    padding-bottom: 10px;
+}
+
 
