[#139504917][#139505609] building navigation and integrating login checkpoint

--- a/CalOrdersJET/src/js/views/about.html
+++ b/CalOrdersJET/src/js/views/about.html
@@ -21,16 +21,24 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  * -->
-<div id="productSearchWrapperDiv" class="oj-hybrid-padding">
-
-    <!-- Page Title -->
-    <div id="pageTitleContainer" class="oj-flex-item oj-sm-6">
-        <h1 style="margin-bottom:0">Product Detail</h1>
+<div id="aboutWrapperDiv" class="oj-hybrid-padding">
+    <h2>About CalOrders</h2>
+    <div class="oj-panel oj-flex">
+        <div id="profilePicturePanel" class="oj-panel oj-flex-item">
+                <img alt="employeePicture" src="../css/images/184313628.jpg" height="300" width="400"/>
+            </div>
+        <div id="aboutWrapperDiv" class="oj-panel oj-flex-item">
+            <p>CalOrders is a revolutionary products and services ordering solution brought to you by <a href="http://www.oncorellc.com" target="_blank">OnCore Consulting LLC.</a></p>
+            <p>With CalOrders you can easily order, maintain, and track products and services across multiple vendors.</p>
+            <p>CalOrders is also fully responsive for easy access on mobile, tablet, and computing devices.</p>
+            <p>Thank you for using CalOrders, we appreciate your business.</p>
+            <br/>
+            <p><strong>CalOrders version: <span data-bind="text: applicationVersion"></span></strong></p>
+        </div>
     </div>
 
-    <!-- Page Content -->
-    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap">
 
-        <span id="productId" data-bind="text: 'TODO: Put content here.  You are viewing product Id: ' + productId()"></span>
-    </div>
+    
+        
+   
 </div>
