--- a/CalOrdersJET/src/js/views/orderHistory.html
+++ b/CalOrdersJET/src/js/views/orderHistory.html
@@ -21,16 +21,8 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  * -->
-<div id="productSearchWrapperDiv" class="oj-hybrid-padding">
-
-    <!-- Page Title -->
-    <div id="pageTitleContainer" class="oj-flex-item oj-sm-6">
-        <h1 style="margin-bottom:0">Product Detail</h1>
-    </div>
-
-    <!-- Page Content -->
-    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap">
-
-        <span id="productId" data-bind="text: 'TODO: Put content here.  You are viewing product Id: ' + productId()"></span>
-    </div>
+<div class="oj-hybrid-padding">
+  <h2>Order History</h2>
+    <div class="oj-panel oj-flex">
+    </div>    
 </div>
