--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -25,7 +25,7 @@
 
     <!-- Page Title -->
     <div id="pageTitleContainer" class="oj-flex-item oj-sm-2">
-        <h1 style="margin-bottom:0">Products</h1>
+        <h2 style="margin-bottom:0">Products</h2>
     </div>
 
     <!-- Page Content -->
@@ -144,7 +144,7 @@
                 <div class="oj-flex-item">
                     <img alt="product image"  data-bind="attr: {src: addedProductPhoto}" height="100" width="100"/>
                 </div>
-
+                
                 <div class="oj-flex-item oj-sm-justify-content-center">
                     <span data-bind="text: 'Product '"></span>
                     <span class="confirmation-product-name" data-bind="text: addedProductName"></span>
@@ -195,7 +195,7 @@
             <div data-bind="click: $parent.navigateToProductDetail">
 
                 <div class="oj-flex-item oj-sm-4">
-                    <img alt="product image"  data-bind="attr: {src: $parent.getPhoto($data['prdUid'])}" height="100" width="100"/>
+                    <img alt="product image" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}" height="100" width="100"/>
                 </div>
                 <div class="oj-flex-item">
                     <h3 aria-label="product description" data-bind="text: $data['prdName']" tabindex="0"></h3>
@@ -232,7 +232,7 @@
         <div>
             <div class="oj-flex oj-flex-items-pad">
                 <div class="oj-flex-item oj-lg-4 oj-md-4" data-bind="click: $parent.navigateToProductDetail">
-                    <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" height="100" width="100" data-bind="attr: {src: $parent.getPhoto($data['prdUid'])}"/>
+                    <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" height="100" width="100" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
                     <h2 class="demo-employee-name" data-bind="text: $data['prdName']"></h2>
                 </div>
                 <div class="oj-flex-item oj-lg-5 oj-md-4">
