[#139505609] implemented default login, fleshed out welcome language, now hides OnCore logo when in mobile view

--- a/CalOrdersJET/src/js/views/login.html
+++ b/CalOrdersJET/src/js/views/login.html
@@ -108,13 +108,13 @@
                 <!-- buttons -->
                 <div class="oj-flex">    
 
-                    <button id= "cancel"
+                    <button id= "cancel" type="button"
                             data-bind="click: cancelClick, ojComponent: { component: 'ojButton', label: 'Cancel' }">
                     </button>
                     
                     <div class="oj-padding-horizontal"></div>
 
-                    <button id= "continue"
+                    <button id= "continue" type="submit"
                               data-bind="click: continueClick, ojComponent: { component: 'ojButton', label: 'Continue', disabled: isLoginDisabled()}">
                     </button> 
                 </div>
