--- a/CalOrdersJET/src/js/views/welcome.html
+++ b/CalOrdersJET/src/js/views/welcome.html
@@ -30,7 +30,11 @@
         <div id="welcomeWrapperDiv" class="oj-panel oj-flex-item">
             <h2>Welcome to CalOrders</h2>
             <div class="oj-padding-vertical"/>
-            <p>CalOrders allows users to easily order new products.</p>
+            <p>CalOrders is a prototype developed by OnCore Consulting, LLC for the California Department of Technology.</p>
+            <p>CalOrders simulates an online ordering system, for products and services, designed to support California IT Departments.</p>
+            <p>All data in this site is simulated test data and any relation to actual products, services, </p>
+            <p>companies, or any other entity is for testing purposes only and </p>
+            <p>is not reflective of real product offerings or services.</p>
             <div class="oj-padding-vertical"/>
             <div class="oj-flex">
 
@@ -43,7 +47,7 @@
                     
                     <div class="oj-padding-horizontal"></div>-->
 
-                    <button id= "login"
+                    <button id= "login" type="button"
                               data-bind="click: onClickLoadLogin, ojComponent: { component: 'ojButton', label: 'Login'}">
                     </button> 
                 </div>
