--- a/CalOrdersJET/src/js/views/orderConfirmation.html
+++ b/CalOrdersJET/src/js/views/orderConfirmation.html
@@ -40,7 +40,7 @@
             selectionMode: 'none',
             selection: [],
             optionChange: changeHandler,
-            rootAttributes: {style: 'width:100%;height:100vh;overflow:auto; margin-top: 5px'},
+            rootAttributes: {style: 'width:100%;height:100%;overflow:auto; margin-top: 5px'},
             scrollPolicy: 'loadMoreOnScroll',
             scrollPolicyOptions: {fetchSize: 10}}">
             </ul>
@@ -81,9 +81,9 @@
 
                 <div class="oj-sm-justify-content confirmation_bold">Shipping Address:</div>
                 <div class="oj-padding-vertical"></div>
-                <div class="oj-sm-justify-content"><div data-bind="text: getAddressLine1()"></div></div>
-                <div class="oj-sm-justify-content"><div data-bind="text: getAddressLine2()"></div></div>
-                <div class="oj-sm-justify-content"><div data-bind="text: getCityStateZip()"></div></div>
+                <div class="oj-sm-justify-content"><div data-bind="text: addressLine1"></div></div>
+                <div class="oj-sm-justify-content"><div data-bind="text: addressLine2"></div></div>
+                <div class="oj-sm-justify-content"><div data-bind="text: cityStateZip"></div></div>
 
 
                 <div>
@@ -91,9 +91,9 @@
                     <div class="oj-padding-vertical"></div>
                     <div class="oj-sm-justify-content confirmation_bold">Order Totals:</div>
                     <div class="oj-padding-vertical"></div>
-                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: getItemTotalPrice()"></div></div></div>
-                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: getShippingPrice()"></div></div></div>
-                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: getTotalPrice()"></div></div></div>
+                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: itemTotalPrice"></div></div></div>
+                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: shippingPrice"></div></div></div>
+                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: totalPrice"></div></div></div>
                 </div>
             </div>
         </div>
