[#139506475]  Add Product page. The page is able to pull back reference data. The contains page level validations.

--- a/CalOrdersJET/src/js/views/productAdd.html
+++ b/CalOrdersJET/src/js/views/productAdd.html
@@ -199,7 +199,7 @@ THE SOFTWARE.
 
                         <div class="oj-padding-horizontal"></div>
 
-                        <button id= "Save"
+                        <button id= "save"
                                 data-bind="click: buttonClick, ojComponent: { component: 'ojButton', label: 'Save' }">
                         </button> 
                     </div>
