--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -51,19 +51,20 @@
                     <div class="oj-flex">
                         <div class="oj-flex-item">
                             <div class="oj-flex oj-sm-12 oj-lg-4">
-                                <img alt="employee image" style="float:left;" 
-                                     data-bind="attr: {src: $parent.getPhoto($data['empId'])}"/>
+                                <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" 
+                                     height="100" width="100" 
+                                     data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
                             </div>
                             <div class="oj-flex oj-sm-12 oj-lg-4">
 
-                                <h4 data-bind="text: $data['description']"></h4>
+                                <h4 data-bind="text: $data['prdName']"></h4>
                             </div>
                         </div>
                         <div class="oj-flex-item oj-sm-12 oj-lg-2">
                             <h4>1</h4>
                         </div>
                         <div class="oj-flex-item oj-sm-12 oj-lg-2">
-                            <h4>Price: $<span data-bind="text: $data['price']"/></h4>
+                            <h4>Price: $<span data-bind="text: $data['prdPrice']"/></h4>
                         </div>
                     </div>
             </div>
@@ -71,41 +72,39 @@
             </script>
         </div>
     </div>
+
+    <!-- Totals -->
     <div class="oj-padding-vertical"></div>
 
-    <div class="oj-flex oj-sm-12 oj-sm-justify-content-flex-end">
-        <div class="oj-flex-item oj-sm-5 oj-lg-2">
-            <div class="oj-sm-text-align-end">
-                Total:<br/>
-                Shipping:<br/>
-                Total Price:<br/>
+    <div class="oj-md-odd-cols-4">
+        <div class="oj-flex">
+            <div>
+
+               <div>
+
+                    <div class="oj-padding-vertical"></div>
+                    <div class="oj-sm-justify-content confirmation_bold">Order Totals:</div>
+                    <div class="oj-padding-vertical"></div>
+                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: getItemTotalPrice()"></div></div></div>
+                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: getShippingPrice()"></div></div></div>
+                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: getTotalPrice()"></div></div></div>
+                </div>
             </div>
         </div>
+    </div>
 
-        <div class="oj-flex-item oj-sm-5 oj-lg-2">
-            <div class="oj-sm-text-align-end">
-                <div data-bind="text: getItemTotalPrice()"></div>
-                <div data-bind="text: getShippingPrice()"></div>
-                <div data-bind="text: getTotalPrice()"></div>
-            </div>
+    <div class="oj-padding-vertical"></div>
+
+    <div class="oj-flex oj-sm-justify-content-flex-end">
+
+        <div class="oj-flex"> 
+            <button id= "continueShopping" 
+                    data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
+            </button> 
+            <div class="oj-padding-horizontal"></div>
+            <button id= "placeOrder" 
+                    data-bind="click: placeOrderClick, ojComponent: { component: 'ojButton', label: 'Order' }">
+            </button> 
         </div>
     </div>
-</div>
-
-<div class="oj-padding-vertical"></div>
-
-<div class="oj-flex oj-sm-12 oj-sm-justify-content-flex-end">
-
-    <div class="oj-flex-item oj-sm-5 oj-lg-1 oj-sm-text-align-end">
-        <button id= "continueShopping" 
-                data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
-        </button> 
-    </div>
-    <div class="oj-padding-horizontal"></div>
-    <div class="oj-flex-item oj-sm-4 oj-lg-1 oj-sm-text-align-end">
-        <button id= "placeOrder" 
-                data-bind="click: placeOrderClick, ojComponent: { component: 'ojButton', label: 'Order' }">
-        </button> 
-    </div>
-</div>
 
