[#139505805][#139506201] Updated product search to have breadcrumbs at the top of the page

--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -114,9 +114,11 @@
                             </select>
                         </div>
 
-
-
-
+                        <!-- Breadcrumbs -->
+                        <div id="productSearchBreadcrumbs" class="oj-sm-only-hide">
+                            <span data-bind="text: productCategoryBreadcrumbs"></span>
+                            <div class="oj-padding-vertical"></div>
+                        </div>
 
                         <div class="oj-flex oj-flex-items oj-sm-align-items-flex-end">
 
