--- a/CalOrdersJET/src/js/views/orderConfirmation.html
+++ b/CalOrdersJET/src/js/views/orderConfirmation.html
@@ -32,87 +32,86 @@
     <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap">
         <div id="cartWrapperDiv" class="oj-panel oj-flex-item oj-sm-flex-wrap-nowrap">
 
-            <!-- this is the listLayout template. It uses the ojListView component to do the layout and the pagination. -->
-            <ul id="listview"
-                data-bind="ojComponent: {component: 'ojListView',
-            data: listViewDataSource,
-            item: {template: 'peoplelist_template'},
-            selectionMode: 'none',
-            selection: [],
-            optionChange: changeHandler,
-            rootAttributes: {style: 'width:100%;height:100%;overflow:auto; margin-top: 5px'},
-            scrollPolicy: 'loadMoreOnScroll',
-            scrollPolicyOptions: {fetchSize: 10}}">
-            </ul>
-
-            <!-- this is the content that is loaded by the ojListView component above -->
-            <script id="peoplelist_template" type="text/html">
-                <li class="oj-flex-item oj-sm-12" data-bind="click: $parent.loadPersonPage">
-                    <div class="oj-flex">
-                        <div class="oj-flex-item">
-                            <div class="oj-flex oj-sm-6">
-                                <img alt="employee image" style="float:left;" 
-                                     data-bind="attr: {src: $parent.getPhoto($data['empId'])}"/>
-                            </div>
-                            <div class="oj-flex oj-sm-6">
-
-                                <h4 data-bind="text: $data['description']"></h4>
-                            </div>
-                        </div>
-                        <div class="oj-flex-item oj-sm-3">
-                            <h4>1</h4>
-                        </div>
-                        <div class="oj-flex-item oj-sm-3">
-                            <h4>Price: $<span data-bind="text: $data['price']"/></h4>
-                        </div>
-                    </div>
+            <div id="productlistview" >
+                <div class="oj-flex oj-flex-items-pad oj-sm-flex-direction-column" data-bind="template: 'productListLayout'"></div>
             </div>
-            </li>
-            </script>
-        </div>
-    </div>
-    <div class="oj-padding-vertical"></div>
 
- 
-    <!-- CONFIRMATION SUMMARY -->
-    <div class="oj-md-odd-cols-4">
-        <div class="oj-flex">
-            <div>
+            <!-- Product List view -->
+            <script id="productListLayout" type="text/html">
+                <ul id="listview"
+                    data-bind="ojComponent: {component: 'ojListView',
+                data: cardViewDataSource,
+                rootAttributes: {'style': 'width:100%'},
+            item: {template: 'productlist_template'}}">
+                </ul>
+                <div class="oj-flex oj-flex-items-pad">
+                    <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2}">
+                    </div>
+                </div>
+                </script>
 
-                <div class="oj-sm-justify-content confirmation_bold">Shipping Address:</div>
-                <div class="oj-padding-vertical"></div>
-                <div class="oj-sm-justify-content"><div data-bind="text: addressLine1"></div></div>
-                <div class="oj-sm-justify-content"><div data-bind="text: addressLine2"></div></div>
-                <div class="oj-sm-justify-content"><div data-bind="text: cityStateZip"></div></div>
+                <!-- Product List view (row format) -->
+                <script id="productlist_template" type="text/html">
+                    <li class="oj-flex-item oj-sm-12">
+                        <div>
+                            <div class="oj-flex oj-flex-items-pad">
+                                <div class="oj-flex-item oj-lg-4 oj-md-4" >
+                                    <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" height="100" width="100" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
+                                    <h2 class="demo-employee-name" data-bind="text: $data['prdName']"></h2>
+                                </div>
+                                <div class="oj-flex-item oj-lg-5 oj-md-4">
 
-
-                <div>
-
-                    <div class="oj-padding-vertical"></div>
-                    <div class="oj-sm-justify-content confirmation_bold">Order Totals:</div>
-                    <div class="oj-padding-vertical"></div>
-                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: itemTotalPrice"></div></div></div>
-                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: shippingPrice"></div></div></div>
-                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: totalPrice"></div></div></div>
+                                    <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
+                                        <div class="demo-employee-tenure" data-bind="text: '$' + $data['prdPrice']"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    </script>
                 </div>
             </div>
-        </div>
-   <!-- END CONFIRMATION SUMMARY -->
+            <div class="oj-padding-vertical"></div>
 
- 
 
-    </div>
+            <!-- CONFIRMATION SUMMARY -->
+            <div class="oj-md-odd-cols-4">
+                <div class="oj-flex">
+                    <div>
 
-    <div class="oj-padding-vertical"></div>
-  
-    <div class="oj-flex oj-sm-justify-content-flex-end">
+                        <div class="oj-sm-justify-content confirmation_bold">Shipping Address:</div>
+                        <div class="oj-padding-vertical"></div>
+                        <div class="oj-sm-justify-content"><div data-bind="text: addressLine1"></div></div>
+                        <div class="oj-sm-justify-content"><div data-bind="text: addressLine2"></div></div>
+                        <div class="oj-sm-justify-content"><div data-bind="text: cityStateZip"></div></div>
 
-        <div class="oj-flex">    
 
-            <button id= "continueShopping" 
-                    data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
-            </button> 
-        </div>
-     
-    </div>
- 
+                        <div>
+
+                            <div class="oj-padding-vertical"></div>
+                            <div class="oj-sm-justify-content confirmation_bold">Order Totals:</div>
+                            <div class="oj-padding-vertical"></div>
+                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: itemTotalPrice"></div></div></div>
+                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: shippingPrice"></div></div></div>
+                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: totalPrice"></div></div></div>
+                        </div>
+                    </div>
+                </div>
+                <!-- END CONFIRMATION SUMMARY -->
+
+
+
+            </div>
+
+            <div class="oj-padding-vertical"></div>
+
+            <div class="oj-flex oj-sm-justify-content-flex-end">
+
+                <div class="oj-flex">    
+
+                    <button id= "continueShopping" 
+                            data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
+                    </button> 
+                </div>
+
+            </div>
