--- a/CalOrdersJET/src/js/views/orderConfirmation.html
+++ b/CalOrdersJET/src/js/views/orderConfirmation.html
@@ -33,85 +33,134 @@
         <div id="cartWrapperDiv" class="oj-panel oj-flex-item oj-sm-flex-wrap-nowrap">
 
             <div id="productlistview" >
-                <div class="oj-flex oj-flex-items-pad oj-sm-flex-direction-column" data-bind="template: 'productListLayout'"></div>
+                <div class="oj-flex oj-flex-items-pad oj-sm-flex-direction-column" data-bind="template: large() ? 'productListLayout' : 'productCardLayout'"></div>
             </div>
 
-            <!-- Product List view -->
-            <script id="productListLayout" type="text/html">
-                <ul id="listview"
-                    data-bind="ojComponent: {component: 'ojListView',
+
+            <!-- Product Card View -->
+            <script id="productCardLayout" type="text/html">
+                <div class="oj-flex oj-flex-items-pad">
+                    <ul id="listviewcard"
+                        class="oj-flex oj-listview-card-layout"
+                        data-bind="ojComponent: {component: 'ojListView',
                 data: cardViewDataSource,
                 rootAttributes: {'style': 'width:100%'},
-            item: {template: 'productlist_template'}}">
-                </ul>
+            item: {template: 'productcard_template'}}">
+                    </ul>
+                </div>
                 <div class="oj-flex oj-flex-items-pad">
                     <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2}">
                     </div>
                 </div>
                 </script>
 
-                <!-- Product List view (row format) -->
-                <script id="productlist_template" type="text/html">
-                    <li class="oj-flex-item oj-sm-12">
-                        <div>
-                            <div class="oj-flex oj-flex-items-pad">
-                                <div class="oj-flex-item oj-lg-4 oj-md-4" >
-                                    <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" height="100" width="100" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
-                                    <h2 class="demo-employee-name" data-bind="text: $data['prdName']"></h2>
-                                </div>
-                                <div class="oj-flex-item oj-lg-5 oj-md-4">
+                <!-- Product Card view (card format)  -->
+                <script id="productcard_template" type="text/html">
+                    <li class="oj-flex-item oj-sm-12 oj-md-6 oj-lg-4 oj-xl-3" data-bind="event:{keypress:$parent.onEnter}" style="margin:0;border-style:none">
+                        <div class="oj-panel oj-panel-alt1" style="margin: 5px 0px 10px 0px;">
 
-                                    <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
-                                        <div class="demo-employee-tenure" data-bind="text: '$' + $data['prdPrice']"></div>
-                                    </div>
+                            <div data-bind="click: $parent.navigateToProductDetail">
+
+                                <div class="oj-flex-item oj-sm-4">
+                                    <img alt="product image" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}" height="100" width="100"/>
                                 </div>
+                                <div class="oj-flex-item">
+                                    <h3 aria-label="product description" data-bind="text: $data['prdName']" tabindex="0"></h3>
+                                    <div data-bind="text: '$' + $data['prdPrice']"></div>
+                                </div>
+                            </div>
+
+                            <div class="oj-padding-vertical"></div>
+
+                            <div class="oj-flex-item">
+                                <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button> 
                             </div>
                         </div>
                     </li>
                     </script>
-                </div>
-            </div>
-            <div class="oj-padding-vertical"></div>
 
 
-            <!-- CONFIRMATION SUMMARY -->
-            <div class="oj-md-odd-cols-4">
-                <div class="oj-flex">
-                    <div>
-
-                        <div class="oj-sm-justify-content confirmation_bold">Shipping Address:</div>
-                        <div class="oj-padding-vertical"></div>
-                        <div class="oj-sm-justify-content"><div data-bind="text: addressLine1"></div></div>
-                        <div class="oj-sm-justify-content"><div data-bind="text: addressLine2"></div></div>
-                        <div class="oj-sm-justify-content"><div data-bind="text: cityStateZip"></div></div>
 
 
-                        <div>
+                    <!-- Product List view -->
+                    <script id="productListLayout" type="text/html">
+                        <ul id="listview"
+                            data-bind="ojComponent: {component: 'ojListView',
+                data: cardViewDataSource,
+                rootAttributes: {'style': 'width:100%'},
+            item: {template: 'productlist_template'}}">
+                        </ul>
+                        <div class="oj-flex oj-flex-items-pad">
+                            <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2}">
+                            </div>
+                        </div>
+                        </script>
 
-                            <div class="oj-padding-vertical"></div>
-                            <div class="oj-sm-justify-content confirmation_bold">Order Totals:</div>
-                            <div class="oj-padding-vertical"></div>
-                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: itemTotalPrice"></div></div></div>
-                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: shippingPrice"></div></div></div>
-                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: totalPrice"></div></div></div>
+                        <!-- Product List view (row format) -->
+                        <script id="productlist_template" type="text/html">
+                            <li class="oj-flex-item oj-sm-12">
+                                <div>
+                                    <div class="oj-flex oj-flex-items-pad">
+                                        <div class="oj-flex-item oj-lg-4 oj-md-4">
+                                            <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" height="100" width="100" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
+                                            <div class="demo-employee-name" data-bind="text: $data['prdName']"></div>
+                                        </div>
+                                        <div class="oj-flex-item oj-sm-12 oj-lg-2">
+                                            <span>Quantity: </span><span data-bind="text: $data['quantity']"/>
+                                        </div>
+                                        <div class="oj-flex-item oj-lg-5 oj-md-4">
+
+                                            <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
+                                                <div class="demo-employee-tenure" data-bind="text: '$' + $data['prdPrice']"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            </script>
                         </div>
                     </div>
-                </div>
-                <!-- END CONFIRMATION SUMMARY -->
+                    <div class="oj-padding-vertical"></div>
+
+
+                    <!-- CONFIRMATION SUMMARY -->
+                    <div class="oj-md-odd-cols-4">
+                        <div class="oj-flex">
+                            <div>
+
+                                <div class="oj-sm-justify-content confirmation_bold">Shipping Address:</div>
+                                <div class="oj-padding-vertical"></div>
+                                <div class="oj-sm-justify-content"><div data-bind="text: addressLine1"></div></div>
+                                <div class="oj-sm-justify-content"><div data-bind="text: addressLine2"></div></div>
+                                <div class="oj-sm-justify-content"><div data-bind="text: cityStateZip"></div></div>
+
+
+                                <div>
+
+                                    <div class="oj-padding-vertical"></div>
+                                    <div class="oj-sm-justify-content confirmation_bold">Order Totals:</div>
+                                    <div class="oj-padding-vertical"></div>
+                                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: itemTotalPrice"></div></div></div>
+                                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: shippingPrice"></div></div></div>
+                                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: totalPrice"></div></div></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- END CONFIRMATION SUMMARY -->
 
 
 
-            </div>
+                    </div>
 
-            <div class="oj-padding-vertical"></div>
+                    <div class="oj-padding-vertical"></div>
 
-            <div class="oj-flex oj-sm-justify-content-flex-end">
+                    <div class="oj-flex oj-sm-justify-content-flex-end">
 
-                <div class="oj-flex">    
+                        <div class="oj-flex">    
 
-                    <button id= "continueShopping" 
-                            data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
-                    </button> 
-                </div>
+                            <button id= "continueShopping" 
+                                    data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
+                            </button> 
+                        </div>
 
-            </div>
+                    </div>
