[#139505805] Fixed image issue to show default image if no image is available

--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -231,7 +231,7 @@
         </ul>
     </div>
     <div class="oj-flex oj-flex-items-pad">
-        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2, pageOptions: {layout: [ large() ? 'auto' : 'nav']}}">
+        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2, pageOptions: {layout: [ medium() ? 'auto' : 'nav']}}">
         </div>
     </div>
 </script>
@@ -283,7 +283,7 @@
             item: {template: 'productlist_template'}}">
     </ul>
     <div class="oj-flex oj-flex-items-pad">
-        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2, pageOptions: {layout: [large() ? 'auto' : 'nav']}}">
+        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2, pageOptions: {layout: [medium() ? 'auto' : 'nav']}}">
         </div>
     </div>
 </script>
