--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -191,7 +191,7 @@
 
             <div class="oj-flex">
                 <div class="oj-flex-item">
-                    <img alt="product image"  data-bind="attr: {src: addedProductPhoto}" height="100" width="100"/>
+                    <img alt="product"  data-bind="attr: {src: addedProductPhoto}" height="100" width="100"/>
                 </div>
 
                 <div class="oj-flex-item oj-sm-justify-content-center">
@@ -244,7 +244,7 @@
             <div data-bind="click: $parent.navigateToProductDetail">
 
                 <div class="oj-flex-item oj-sm-4">
-                    <img alt="product image" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}" height="100" width="100"/>
+                    <img alt="product" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}" height="100" width="100"/>
                 </div>
                 <div class="oj-flex-item">
                     <h3 aria-label="product description" data-bind="text: $data['prdName']" tabindex="0"></h3>
@@ -259,14 +259,14 @@
             </div>
 
             <div class="oj-flex-item">
-                <div id="compareProduct" aria-labelledby="compare product"
+                <div id="compareProductWrapper" 
                      data-bind=
                      "ojComponent: {
                         component: 'ojCheckboxset', 
                         value: compareProduct}" >
                     <span class="oj-choice-row">
-                        <input id="compareProduct" type="checkbox" value="true">
-                        <label for="true">Compare</label>
+                        <input data-bind="attr: {id: 'compareProduct' + $data['prdUid']}" type="checkbox" value="true">
+                        <label data-bind="attr: {for: 'compareProduct' + $data['prdUid']}">Compare</label>
                     </span>
                 </div>
             </div>
@@ -294,7 +294,7 @@
         <div>
             <div class="oj-flex oj-flex-items-pad">
                 <div class="oj-flex-item oj-lg-4 oj-md-4" data-bind="click: $parent.navigateToProductDetail">
-                    <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" height="100" width="100" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
+                    <img alt="product" class="demo-circular demo-employee-photo" style="float:left;" height="100" width="100" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
                     <h2 class="demo-employee-name" data-bind="text: $data['prdName']"></h2>
                 </div>
 
@@ -305,14 +305,14 @@
                 <div class="oj-flex-item oj-md-4 oj-sm-float-end">
                     <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button>
                     
-                     <div id="compareProduct" aria-labelledby="compare product"
+                     <div id="compareProductWrapper"
                          data-bind=
                          "ojComponent: {
                         component: 'ojCheckboxset', 
                         value: compareProduct}" >
                         <span class="oj-choice-row">
-                            <input id="compareProduct" type="checkbox" value="true">
-                            <label for="true">Compare</label>
+                            <input data-bind="attr: {id: 'compareProduct' + $data['prdUid']}" type="checkbox" value="true">
+                            <label data-bind="attr: {for: 'compareProduct' + $data['prdUid']}">Compare</label>
                         </span>
                     </div>
                 </div>
